# ESM2_MultiGPU_Inference

./: .dockerignore  .gitignore  .kube-linter.yaml  .pre-commit-config.yaml  Dockerfile  README.md  flake8-report-2.2.2026.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: .flake8  __init__.py  config.py  main.py  model_manager.py  schemas.py
k8s/: configmap.yaml  deployment.yaml  esm2-8gpu-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
scripts/: benchmark.py  fault_tolerance_test.sh
tests/: __init__.py  conftest.py  test.api.py  test_gpu_distributor.py  test_model_manager.py  tests.txt
